4 APR 2020 - Version [a.2.0]:
 [Change]
  -Text screens no longer attempt to redraw themselves unless a meaningful change has taken place.
  -User profile now remembers last session's display settings (e.g. fullscreen and graphical modes)
  -Player now moves before all monsters.
  -Messages now display with the player message on top, and only attempt to display since last player action.
  -Message overflow indicates that more messages are available, which appear as before in Message Recall.
  -Floor bosses may no longer spawn on floor 1 of the Dark Grove.
  -Improved player HP and Soul at all levels.
 [New]
  -Library now supports basic upgrades.
  -Text items may now be found in the dungeon and researched in the player estate(with required upgrade).
  -Languages added and tracked across games.

29 MAR 2020 - Version [a.1.0]:
 [Bug Fix]:
  -Fixed a bug that was causing far more damage in combat than intended.
  -Fixed a bug that allowed Actors to occasionally attack themselves.
 [Change]:
  -Combat interaction damage lowered and multipliers adjusted.
  -Starting leather armor is now more durable.
 [New]:
  -Added new DamageTypes Arcane, Eldritch, Lightning, Psychic, True.
  -Combatant life is now divided into Health(Body), Sanity(Mind), and Soul.
  -Information about the game in general, life, and melee combat added to the Manual.
  -Support for graphical tiles added.

27 MAR 2020 - Version [a.0.1]:
 [Bug Fix]:
  -Fixed a bug where player equipment would remain degraded between characters.
 [Change]:
  -Changed webbed oak display symbol from & -> * to differentiate it further from the Tangled Portal.
  -Reduced the frequency of automatic saving by a factor of 8.

27 MAR 2020 - Version [a.0.0]:
  -Initial release!